@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [kaltura] Fix wrong widget ID in some cases (#11480)
+
+
 version 2016.12.18
 
 Core
